--- a/app/src/main/res/layout/all_activity.xml
+++ b/app/src/main/res/layout/all_activity.xml
@@ -8,45 +8,45 @@
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="102"
-        android:layout_height="46"
+        android:layout_width="102dp"
+        android:layout_height="46dp"
         android:layout_marginTop="152dp"
         android:background="@drawable/p3"
         android:text="我參加的"
-        android:textSize="16"
+        android:textSize="16dp"
         app:layout_constraintStart_toEndOf="@+id/button6"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button10"
-        android:layout_width="102"
-        android:layout_height="46"
+        android:layout_width="102dp"
+        android:layout_height="46dp"
         android:layout_marginTop="152dp"
         android:background="@drawable/p3"
         android:text="附近活動"
-        android:textSize="16"
+        android:textSize="16dp"
         app:layout_constraintStart_toEndOf="@+id/button9"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="102"
-        android:layout_height="46"
+        android:layout_width="102dp"
+        android:layout_height="46dp"
         android:layout_marginTop="152dp"
         android:background="@drawable/p2"
         android:text="活動"
-        android:textSize="16"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="102"
-        android:layout_height="46"
+        android:layout_width="102dp"
+        android:layout_height="46dp"
         android:layout_marginTop="152dp"
         android:background="@drawable/p3"
         android:text="我舉辦的"
-        android:textSize="16"
+        android:textSize="16dp"
         app:layout_constraintStart_toEndOf="@+id/button8"
         app:layout_constraintTop_toTopOf="parent" />
 
