can't test on computer QQ

--- a/app/src/main/res/drawable/outside.xml
+++ b/app/src/main/res/drawable/outside.xml
@@ -3,5 +3,5 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dip"
-        android:color="#0290D2"/>
+        android:color="#000000"/>
 </shape>
