--- a/app/src/main/res/layout/activity_nearact.xml
+++ b/app/src/main/res/layout/activity_nearact.xml
@@ -79,7 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+        <EditText
             android:id="@+id/editsuffer"
             android:layout_width="213dp"
             android:layout_height="45dp"
@@ -118,8 +118,8 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
         <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView2"
-            android:layout_width="wrap_content"
+            android:id="@+id/mapView"
+            android:layout_width="399dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
     </LinearLayout>
