--- a/app/src/main/res/layout/activity_nearact.xml
+++ b/app/src/main/res/layout/activity_nearact.xml
@@ -80,16 +80,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/editsuffer"
-            android:layout_width="213dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="91dp"
-            android:layout_marginLeft="91dp"
-            android:layout_marginTop="82dp"
-            android:layout_marginBottom="18dp"
-            android:background="@drawable/outside"
-            android:inputType="text" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="266dp"
+            android:layout_height="129dp">
+
+            <EditText
+                android:id="@+id/editsuffer"
+                android:layout_width="164dp"
+                android:layout_height="44dp"
+                android:layout_marginStart="103dp"
+                android:layout_marginLeft="103dp"
+                android:layout_marginTop="86dp"
+                android:background="@drawable/outside"
+                android:ems="10"
+                android:inputType="textPersonName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="104dp"
