--- a/app/src/main/res/layout/content_allactivity.xml
+++ b/app/src/main/res/layout/content_allactivity.xml
@@ -85,6 +85,7 @@
             android:layout_marginLeft="91dp"
             android:layout_marginTop="82dp"
             android:layout_marginBottom="18dp"
+            android:background="@drawable/outside"
             android:inputType="text" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
