--- a/app/src/main/res/layout/activity_joinact.xml
+++ b/app/src/main/res/layout/activity_joinact.xml
@@ -9,6 +9,8 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+
+
     <LinearLayout
         android:id="@+id/nav_view"
         android:layout_width="250dp"
@@ -26,7 +28,8 @@
     </LinearLayout>
 
     <include
-        layout="@layout/content_nearact"
+        layout="@layout/content_joinact"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
+
 </androidx.drawerlayout.widget.DrawerLayout>
