--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
-
     <LinearLayout
         android:id="@+id/nav_view"
         android:layout_width="250dp"
@@ -26,7 +25,7 @@
     </LinearLayout>
 
     <include
-        layout="@layout/content_nearact"
+        layout="@layout/content_signup"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 </androidx.drawerlayout.widget.DrawerLayout>
