--- a/app/src/main/res/layout/content_allactivity.xml
+++ b/app/src/main/res/layout/content_allactivity.xml
@@ -9,65 +9,6 @@
 
 
     <LinearLayout
-        android:layout_width="401dp"
-        android:layout_height="112dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text=" " />
-
-        <Button
-            android:id="@+id/likebtn"
-            android:layout_width="15dp"
-            android:layout_height="51dp"
-            android:layout_weight="1"
-            android:background="@drawable/p12" />
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text=" " />
-
-        <Button
-            android:id="@+id/applycounts"
-            android:layout_width="7dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/p11" />
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text=" " />
-
-        <Button
-            android:id="@+id/talkbtn"
-            android:layout_width="13dp"
-            android:layout_height="51dp"
-            android:layout_weight="1"
-            android:background="@drawable/p10" />
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="  " />
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="453dp"
         android:layout_height="183dp"
@@ -123,6 +64,7 @@
             android:layout_height="55dp"
             android:layout_weight="1"
             android:background="@drawable/selectactbtn"
+            android:onClick="onClick"
             android:text="@string/activity"
             android:textSize="16dp" />
 
@@ -133,6 +75,7 @@
             android:layout_weight="1"
             android:background="@drawable/selectactbtn"
             android:text="@string/join"
+            android:onClick="onClick"
             android:textSize="16dp" />
 
         <Button
@@ -142,6 +85,7 @@
             android:layout_weight="1"
             android:background="@drawable/selectactbtn"
             android:text="@string/holdon"
+            android:onClick="onClick"
             android:textSize="16dp" />
 
         <Button
@@ -207,31 +151,173 @@
 
     <LinearLayout
         android:id="@+id/linearLayout6"
-        android:layout_width="392dp"
-        android:layout_height="149dp"
+        android:layout_width="422dp"
+        android:layout_height="447dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
 
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="212dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:layout_constraintEnd_toStartOf="@+id/contenct"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/head" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="444dp">
 
-        <TextView
-            android:id="@+id/contenct"
-            android:layout_width="239dp"
-            android:layout_height="172dp"
-            android:layout_weight="1"
-            android:text="@string/actcontenct"
-            android:textSize="24sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="177dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/gogo"
+                        android:layout_width="160dp"
+                        android:layout_height="145dp"
+                        android:background="@drawable/head" />
+
+                    <TextView
+                        android:id="@+id/textView33"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/actcontenct"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="67dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView34"
+                        android:layout_width="39dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/likeit"
+                        android:layout_width="60dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/p12" />
+
+                    <TextView
+                        android:id="@+id/textView35"
+                        android:layout_width="42dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/wantjoin"
+                        android:layout_width="66dp"
+                        android:layout_height="67dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/p11" />
+
+                    <TextView
+                        android:id="@+id/textView36"
+                        android:layout_width="35dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/comment"
+                        android:layout_width="49dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/p10" />
+
+                    <TextView
+                        android:id="@+id/textView37"
+                        android:layout_width="53dp"
+                        android:layout_height="1dp"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="159dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/gotosignup"
+                        android:layout_width="160dp"
+                        android:layout_height="145dp"
+                        android:background="@drawable/head" />
+
+                    <TextView
+                        android:id="@+id/actcontent2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/actcontenct"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="412dp"
+                    android:layout_height="102dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text=" " />
+
+                    <Button
+                        android:id="@+id/likebtn"
+                        android:layout_width="28dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/p12" />
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text=" " />
+
+                    <Button
+                        android:id="@+id/applycounts"
+                        android:layout_width="32dp"
+                        android:layout_height="66dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/p11" />
+
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text=" " />
+
+                    <Button
+                        android:id="@+id/talkbtn"
+                        android:layout_width="16dp"
+                        android:layout_height="62dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/p10" />
+
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="  " />
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
     <LinearLayout
@@ -244,16 +330,5 @@
 
         <include layout="@layout/bottom_bar" />
     </LinearLayout>
-
-    <fragment
-        android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/mobile_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
