--- a/app/src/main/res/layout/content_verify.xml
+++ b/app/src/main/res/layout/content_verify.xml
@@ -21,9 +21,10 @@
 
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="392dp"
-        android:layout_height="921dp"
+        android:layout_width="422dp"
+        android:layout_height="603dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -41,7 +42,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="638dp"
+            android:layout_height="511dp"
             android:padding="5sp">
 
             <LinearLayout
