--- a/app/src/main/res/layout/app_bar_allactivity.xml
+++ b/app/src/main/res/layout/app_bar_allactivity.xml
@@ -27,5 +27,5 @@
     <!--        android:layout_gravity="bottom|end"-->
     <!--        android:layout_margin="@dimen/fab_margin"-->
     <!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
-    <include layout="@layout/content_allactivity" />
+<!--    <include layout="@layout/content_allactivity" />-->
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
