--- a/app/src/main/res/layout/content_allactivity.xml
+++ b/app/src/main/res/layout/content_allactivity.xml
@@ -63,7 +63,7 @@
             android:layout_width="80dp"
             android:layout_height="55dp"
             android:layout_weight="1"
-            android:background="@drawable/selectactbtn"
+            android:background="@drawable/p2"
             android:onClick="onClick"
             android:text="@string/activity"
             android:textSize="16dp" />
