--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -10,7 +10,7 @@
 
 
     <include
-        layout="@layout/app_bar_favorite"
+        layout="@layout/content_favorite"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
