--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -10,7 +10,7 @@
 
 
     <include
-        layout="@layout/app_bar_friend"
+        layout="@layout/content_friend"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
