--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -10,7 +10,7 @@
 
 
     <include
-        layout="@layout/app_bar_setting"
+        layout="@layout/content_setting"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
