--- a/app/src/main/res/layout/content_verify.xml
+++ b/app/src/main/res/layout/content_verify.xml
@@ -21,12 +21,10 @@
 
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="422dp"
-        android:layout_height="603dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -366,8 +364,18 @@
             </LinearLayout>
         </ScrollView>
 
-        <include layout="@layout/bottom_bar" />
-
     </LinearLayout>
+
+    <include
+        layout="@layout/bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
