--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -10,7 +10,7 @@
 
 
     <include
-        layout="@layout/content_chatroom"
+        layout="@layout/app_bar_chatroom"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
