--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -10,7 +10,7 @@
 
 
     <include
-        layout="@layout/content_verify"
+        layout="@layout/app_bar_verify"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
