--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -7,79 +7,64 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="417dp"
-        android:layout_height="134dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/signin"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="69dp"
-            android:text="@string/sigin"
-            android:textSize="24sp" />
+            android:layout_height="103dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
-        <include layout="@layout/bottom_bar" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout7"
-        android:layout_width="172dp"
-        android:layout_height="93dp"
-        android:layout_marginStart="146dp"
-        android:layout_marginLeft="146dp"
-        android:layout_marginTop="102dp"
-        android:layout_marginEnd="93dp"
-        android:layout_marginRight="93dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="166dp"
-            android:layout_height="87dp"
-            android:text="@string/acttitle"
-            android:textSize="36sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="416dp"
-        android:layout_height="400dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
+            <TextView
+                android:layout_marginTop="50dp"
+                android:id="@+id/textView53"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:gravity="center_horizontal|center"
+                android:text="@string/acttitle"
+                android:textSize="36sp"
+                />
+        </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="match_parent"
-                    android:layout_height="228dp"
-                    app:srcCompat="@drawable/head" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="567dp"
+            android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="348dp"
-                    android:layout_height="107dp"
-                    android:text="@string/actdetail"
-                    android:textSize="30sp" />
+            <ImageView
+                android:id="@+id/imageView25"
+                android:layout_width="match_parent"
+                android:layout_height="345dp"
+                android:paddingLeft="15dp"
+                app:srcCompat="@drawable/head" />
 
-            </LinearLayout>
-        </ScrollView>
+            <TextView
+                android:id="@+id/textView54"
+                android:layout_width="354dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/actdetail"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sigin"
+                android:textSize="24sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="408dp"
+            android:layout_height="59dp"
+            android:orientation="vertical">
+
+            <include layout="@layout/bottom_bar" />
+        </LinearLayout>
 
     </LinearLayout>
 
